--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "spark_oauth",
-  "version": "2.0.0",
-  "description": "This is a Spark OAuth Sample. It contains a) web interface of requesting token, b) a token management center.",
-  "main": "app.js",
-  "scripts": {
-    "test": "test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AdamKong/spark-oauth-sample.git"
-  },
-  "keywords": [
+	"name": "spark-oauth-sample",
+	"version": "2.0.4",
+	"description": "This is a Spark OAuth Sample. It contains a) web interface of requesting token, b) a token management center.",
+	"main": "app.js",
+	"scripts": {
+		"test": "test"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/AdamKong/spark-oauth-sample.git"
+	},
+	"keywords": [
     "Spark",
     "OAuth",
+	"Cisco",
+	"Token",
+	"Management Center",
     "Sample"
   ],
-  "author": "Adam Kong",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AdamKong/spark-oauth-sample/issues"
-  },
-  "homepage": "https://github.com/AdamKong/spark-oauth-sample#readme",
-  "dependencies": {
-    "bcrypt": "^0.8.5",
-    "body-parser": "^1.14.2",
-    "cookie-parser": "^1.4.0",
-    "ejs": "^2.3.4",
-    "express": "^4.13.3",
-    "express-session": "^1.12.1",
-    "log4js": "^0.6.29",
-    "mongodb": "^2.1.3",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "request": "^2.67.0",
-    "serve-favicon": "^2.3.0",
-    "uuid": "^2.0.1"
-  }
+	"author": "Adam Kong",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/AdamKong/spark-oauth-sample/issues"
+	},
+	"homepage": "https://github.com/AdamKong/spark-oauth-sample#readme",
+	"dependencies": {
+		"bcrypt": "^0.8.5",
+		"body-parser": "^1.14.2",
+		"cookie-parser": "^1.4.0",
+		"ejs": "^2.3.4",
+		"express": "^4.13.3",
+		"express-session": "^1.12.1",
+		"log4js": "^0.6.29",
+		"mongodb": "^2.1.3",
+		"passport": "^0.3.2",
+		"passport-local": "^1.0.0",
+		"request": "^2.67.0",
+		"serve-favicon": "^2.3.0",
+		"uuid": "^2.0.1"
+	}
 }
